crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_requires_python_interior_exclusion.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_requires_python_interior_exclusion/main.py
---
packages:
  - interior-pkg
count: 1
