crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_requires_python_mismatch.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_requires_python_mismatch/main.py
---
packages:
  - strict-pkg
count: 1
