crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_resource_read.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_resource_read/main.py
---
packages:
  - res-provider-pkg
count: 1
