crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_runpy.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_runpy/main.py
---
packages:
  - runpy-pkg
count: 1
