crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_self_moduletype.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_self_moduletype/main.py
---
packages:
  - self-checking-pkg
count: 1
