crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_shared_library.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_shared_library/main.py
---
packages:
  - cffi-style-pkg
count: 1
