crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_source_blocked_dependent.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_source_blocked_dependent/main.py
---
packages:
  - blocked-dep
  - leaf-pure
count: 2
