crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_spec_origin.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_spec_origin/main.py
---
packages:
  - spec-origin-pkg
count: 1
