crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_split_platlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_split_platlib/main.py
---
packages:
  - foo
count: 1
