crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_vars_provider.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_vars_provider/main.py
---
packages:
  - vars-pkg
count: 1
