crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_version_edge_conflict.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_version_edge_conflict/main.py
---
packages:
  - dist-b
  - "dist-b>=2 ; sys_platform == 'win32'"
count: 2
